Bug 352401 - Regression kMail 5.0.0: "Add/remove Quote Characters" feature in composer always disabled
Summary: Regression kMail 5.0.0: "Add/remove Quote Characters" feature in composer alw...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-07 21:11 UTC by Gunter Ohrner
Modified: 2015-10-09 22:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments
First screenshot showing selected text in plaintext editor, the cursor is in the last line in front of the dash character. (6.89 KB, image/png)
2015-09-11 19:51 UTC, Gunter Ohrner
Details
The same editor window after invoking "Add Quote Characters". The last line has been joined to the previous one, which is not what I expected. (6.52 KB, image/png)
2015-09-11 19:51 UTC, Gunter Ohrner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2015-09-07 21:11:10 UTC
I'm using the plain text composer editor and the "Add/remove Quote Characters" feature in the Edit menu is always disabled.

It does not matter if some text in the editor is highlighted or not, if full lines or only fragments are selected and if there are quote characters already present or not - both menu entries are permanently greyed out.

Reproducible: Always
Comment 1 Laurent Montel 2015-09-08 04:41:15 UTC
I confirm it.
Comment 2 Laurent Montel 2015-09-08 05:16:29 UTC
Git commit 819864c90954ea347389969994275d08c1fbb5b5 by Montel Laurent.
Committed on 08/09/2015 at 05:15.
Pushed by mlaurent into branch 'Applications/15.08'.

Fix Bug 352401 - Regression kMail 5.0.0: "Add/remove Quote Characters" feature in composer always disabled

FIXED-IN: 15.08.1

M  +25   -8    messagecomposer/composer-ng/autotests/richtextcomposeractionstest.cpp
M  +1    -4    messagecomposer/composer-ng/richtextcomposeractions.cpp

http://commits.kde.org/kdepim/819864c90954ea347389969994275d08c1fbb5b5
Comment 3 Gunter Ohrner 2015-09-11 19:47:01 UTC
(I'm talking about the plain text composer here, I did not test the rich text composer.)

I just tested the fixed feature and it behaves strangely if you select multiple rows and the cursor is at the start of the row just below the selected block. This is always the case eg. if you select multiple rows using the keyboard by pressing "Shift+Downarrow".

If you then chose "Add Quote Characters", the unselected row which contains the cursor will be joined to the previous row.

I'll attach some screenshots to illustrate this.
Comment 4 Gunter Ohrner 2015-09-11 19:51:00 UTC
Created attachment 94510 [details]
First screenshot showing selected text in plaintext editor, the cursor is in the last line in front of the dash character.
Comment 5 Gunter Ohrner 2015-09-11 19:51:59 UTC
Created attachment 94511 [details]
The same editor window after invoking "Add Quote Characters". The last line has been joined to the previous one, which is not what I expected.
Comment 6 Laurent Montel 2015-10-08 16:28:19 UTC
Ok it's not the same bug. 
But ok I will investigate it.
But better to open a new bug and not add other bug in an existing bug.
Comment 7 Gunter Ohrner 2015-10-08 17:33:52 UTC
(In reply to Laurent Montel from comment #6)
> But better to open a new bug and not add other bug in an existing bug.

You're absolutely right, sorry. I'm not sure any more why I chose to reopen this bug instead of filing a new one, but a feature not working as desired definitely is a different problem than not even being able to invoke that feature...

That reminds me of a quote by kernel hacker Karol 'sziwan' Kozimor: "I would actually distinguish between problems with compiling the kernel, and problems with the kernel after compiling." (No, back then this comment was *not* triggered by some statement from me, but it still fits pretty good in this case... ;)
Comment 8 Laurent Montel 2015-10-09 22:01:05 UTC
Git commit b76b3a27d2610a575d596ef1d0d01846282ed682 by Montel Laurent.
Committed on 09/10/2015 at 21:59.
Pushed by mlaurent into branch 'master'.

Fix Add quote characters
FIXED-IN: 5.1

M  +5    -1    messagecomposer/src/composer-ng/richtextcomposercontroler.cpp

http://commits.kde.org/kdepim/b76b3a27d2610a575d596ef1d0d01846282ed682