Fix Add quote characters

BUG: 352401
FIXED-IN: 5.1